Feat: Add Vehicle
